--- a/src/components/widgets/rocksoft/Contact.astro
+++ b/src/components/widgets/rocksoft/Contact.astro
@@ -4,7 +4,7 @@
         <div class="grid md:grid-cols-2 grid-cols-1 gap-x-3 gap-y-10">
             <div>
                 <p class="font-bold text-base text-black text-center mb-10 dark:text-white">Pogadajmy na Instagramie</p>
-                <a href="" class="mx-auto bg-rs-green font-bold text-white text-xl rounded-full py-3 px-7 block w-max flex items-center justify-center gap-2">
+                <a href="https://www.instagram.com/direct/t/17845899905846546" target="_blank" class="mx-auto bg-rs-green font-bold text-white text-xl rounded-full py-3 px-7 block w-max flex items-center justify-center gap-2">
                     <span>Napisz</span>
                     <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M16.9286 2.82101H7.07143C4.4678 2.82101 2.35714 4.93167 2.35714 7.5353V17.3924C2.35714 19.9961 4.4678 22.1067 7.07143 22.1067H16.9286C19.5322 22.1067 21.6429 19.9961 21.6429 17.3924V7.5353C21.6429 4.93167 19.5322 2.82101 16.9286 2.82101ZM7.07143 0.463867C3.16599 0.463867 0 3.62985 0 7.5353V17.3924C0 21.2979 3.16599 24.4639 7.07143 24.4639H16.9286C20.834 24.4639 24 21.2979 24 17.3924V7.5353C24 3.62985 20.834 0.463867 16.9286 0.463867H7.07143Z" fill="white"/>
