--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,7 @@ const { language, textDirection } = I18N;
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicons/favicon.png" />
 
     <!-- Comment the line below to disable View Transitions -->
     <ViewTransitions fallback="swap" />
