Rocksoft calenda + logo

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -5,5 +5,5 @@ import { SITE } from 'astrowind:config';
 <span
   class="self-center rtl:ml-0 rtl:mr-2 text-base md:text-base font-bold text-gray-900 whitespace-nowrap dark:text-white text-black"
 >
-  🏠 {SITE?.name}
+  🏠 Twój ekologiczny dom
 </span>
