--- a/src/components/widgets/rocksoft/Hero.astro
+++ b/src/components/widgets/rocksoft/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import Button from '~/components/ui/Button.astro';
+import Button2 from '~/components/ui/Button2.astro';
 
 import type { Hero as Props } from '~/types';
 import HeroImage from './partials/hero-image.astro';
@@ -32,12 +32,12 @@ const {
         </div>
         
         <div class="flex gap-6 mt-7 md:flex-row flex-col items-center md:items-start">
-          <Button variant="green" free="true" class={`md:px-3 px-3`} href="https://calendly.com/klaudia-czyz/darmowa-prezentacja-raypath" target="_blank">
+          <Button2 variant="green" free="true" class={`md:px-3 px-3`} href="https://calendly.com/klaudia-czyz/darmowa-prezentacja-raypath" target="_blank">
             Umów prezentację
-          </Button>
-          <Button variant="transparent" free="false" class={`md:px-3 px-3`} href="/#calc">
+          </Button2>
+          <Button2 variant="transparent" free="false" class={`md:px-3 px-3`} href="/#calc">
             Oblicz oszczędności
-          </Button>
+          </Button2>
         </div>
         <p class="text-base md:text-xl font-normal text-black mt-7 text-center md:text-left dark:text-white">Przewiń dalej, aby dowiedzieć się więcej</p>
         <a href="/#advantages" class="w-16 h-16 flex items-center justify-center rounded-full bg-rs-light-green mt-6 mx-auto md:mx-0">
