--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
 
-// import CalendarComponent from '~/components/widgets/Calendar.astro';
+import CalendarComponent from '~/components/widgets/CalendarComponent.astro';
 
 
 const metadata = {
@@ -13,7 +13,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <!-- Hero Widget ******************* -->
 
-<!-- <CalendarComponent /> -->
+<CalendarComponent />
 
 
 </Layout>
