--- a/src/components/widgets/rocksoft/Hero.astro
+++ b/src/components/widgets/rocksoft/Hero.astro
@@ -32,7 +32,7 @@ const {
         </div>
         
         <div class="flex gap-6 mt-7 md:flex-row flex-col items-center md:items-start">
-          <Button2 variant="green" free="true" class={`md:px-3 px-3`} href="https://calendly.com/klaudia-czyz/darmowa-prezentacja-raypath" target="_blank">
+          <Button2 variant="green" free="true" class={`md:px-3 px-3`} href="/calendar" target="_blank">
             Umów prezentację
           </Button2>
           <Button2 variant="transparent" free="false" class={`md:px-3 px-3`} href="/#calc">
