--- a/src/components/widgets/rocksoft/partials/TestimonialsSplide.astro
+++ b/src/components/widgets/rocksoft/partials/TestimonialsSplide.astro
@@ -56,7 +56,7 @@ const slides = [
 
 
 <div>
-    <section class="splide" aria-label="Testimonials">
+    <section class="splide" aria-label="Testimonials" id="testimonialsSplide">
         <div class="splide__track">
               <ul class="splide__list">
                 {slides.map((slide) => 
