--- a/src/components/widgets/rocksoft/Footer.astro
+++ b/src/components/widgets/rocksoft/Footer.astro
@@ -1,6 +1,7 @@
 ---
 import Logo from "~/components/Logo.astro";
 import Button from "~/components/ui/Button.astro";
+import Button2 from "~/components/ui/Button2.astro";
 ---
 
 <footer class="dark:bg-rs-dark-blue">
@@ -25,9 +26,9 @@ import Button from "~/components/ui/Button.astro";
                 </ul>
             </div>
             <div class="md:order-2 lg:order-4">
-                <Button variant="transparent" free="false" class={`md:px-3 px-3`} href="/#calc">
+                <Button2 variant="transparent" free="false" class={`md:px-3 px-3`} href="/#calc">
                     Oblicz oszczędności
-                </Button>
+                </Button2>
             </div>
         </div>
     </div>
